Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: axiom-api-search
  name: axiom-api-search
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: axiom-api-search
  type: NodePort
status:
  loadBalancer: {}
