Kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: axiom-api
spec:
  rules:
   - http:
      paths:
      - path: /*
        backend:
          serviceName: axiom-api-search
          servicePort: 80
